<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenidos</string>
    <string name="nav_header_subtitle">Inmobiliaria EM</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="contratos">Contratos</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="inquilinos">Inquilinos</string>
    <string name="pagos">Pagos</string>
    <string name="salir">Salir</string>
    <string name="perfil">Perfil</string>
    <string name="add_home">Add Home</string>
        <!-- Other string resources -->

        <string-array name="tipo_inmueble_array">
            <item>Tipo</item>
            <item>Departamento</item>
            <item>Casa</item>
            <item>Depósito</item>
            <item>Local</item>
        </string-array>

        <string-array name="uso_inmueble_array">
            <item>Uso</item>
            <item>Comercial</item>
            <item>Residencial</item>
        </string-array>


</resources>